<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Delete -->
    <item
        android:id="@+id/action_delete_multiple_files"
        android:icon="@drawable/trash"
        android:title="@string/action_delete_file"
        app:showAsAction="ifRoom"/>

    <!-- Help -->
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"/>

    <!-- About -->
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>

    <!-- Replay On-Boarding -->
    <item
        android:id="@+id/action_replay_on_boarding"
        android:title="@string/action_replay_on_boarding"
        app:showAsAction="never"/>

</menu>
